; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3d8/extr_directx.c_d3d8_init.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3d8/extr_directx.c_d3d8_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.d3d8 = type { i32, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32* }

@WINED3D_LEGACY_DEPTH_BIAS = common dso_local global i32 0, align 4
@WINED3D_VIDMEM_ACCOUNTING = common dso_local global i32 0, align 4
@WINED3D_HANDLE_RESTORE = common dso_local global i32 0, align 4
@WINED3D_PIXEL_CENTER_INTEGER = common dso_local global i32 0, align 4
@WINED3D_LEGACY_UNBOUND_RESOURCE_COLOR = common dso_local global i32 0, align 4
@WINED3D_NO_PRIMITIVE_RESTART = common dso_local global i32 0, align 4
@WINED3D_LEGACY_CUBEMAP_FILTERING = common dso_local global i32 0, align 4
@WINED3D_LIMIT_VIEWPORT = common dso_local global i32 0, align 4
@d3d8_vtbl = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @d3d8_init(%struct.d3d8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.d3d8*, align 8
  %4 = alloca i32, align 4
  store %struct.d3d8* %0, %struct.d3d8** %3, align 8
  %5 = load i32, i32* @WINED3D_LEGACY_DEPTH_BIAS, align 4
  %6 = load i32, i32* @WINED3D_VIDMEM_ACCOUNTING, align 4
  %7 = or i32 %5, %6
  %8 = load i32, i32* @WINED3D_HANDLE_RESTORE, align 4
  %9 = or i32 %7, %8
  %10 = load i32, i32* @WINED3D_PIXEL_CENTER_INTEGER, align 4
  %11 = or i32 %9, %10
  %12 = load i32, i32* @WINED3D_LEGACY_UNBOUND_RESOURCE_COLOR, align 4
  %13 = or i32 %11, %12
  %14 = load i32, i32* @WINED3D_NO_PRIMITIVE_RESTART, align 4
  %15 = or i32 %13, %14
  %16 = load i32, i32* @WINED3D_LEGACY_CUBEMAP_FILTERING, align 4
  %17 = or i32 %15, %16
  %18 = load i32, i32* @WINED3D_LIMIT_VIEWPORT, align 4
  %19 = or i32 %17, %18
  store i32 %19, i32* %4, align 4
  %20 = load %struct.d3d8*, %struct.d3d8** %3, align 8
  %21 = getelementptr inbounds %struct.d3d8, %struct.d3d8* %20, i32 0, i32 2
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  store i32* @d3d8_vtbl, i32** %22, align 8
  %23 = load %struct.d3d8*, %struct.d3d8** %3, align 8
  %24 = getelementptr inbounds %struct.d3d8, %struct.d3d8* %23, i32 0, i32 0
  store i32 1, i32* %24, align 8
  %25 = call i32 (...) @wined3d_mutex_lock()
  %26 = load i32, i32* %4, align 4
  %27 = call i32 @wined3d_create(i32 %26)
  %28 = load %struct.d3d8*, %struct.d3d8** %3, align 8
  %29 = getelementptr inbounds %struct.d3d8, %struct.d3d8* %28, i32 0, i32 1
  store i32 %27, i32* %29, align 4
  %30 = call i32 (...) @wined3d_mutex_unlock()
  %31 = load %struct.d3d8*, %struct.d3d8** %3, align 8
  %32 = getelementptr inbounds %struct.d3d8, %struct.d3d8* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %37, label %35

35:                                               ; preds = %1
  %36 = load i32, i32* @FALSE, align 4
  store i32 %36, i32* %2, align 4
  br label %39

37:                                               ; preds = %1
  %38 = load i32, i32* @TRUE, align 4
  store i32 %38, i32* %2, align 4
  br label %39

39:                                               ; preds = %37, %35
  %40 = load i32, i32* %2, align 4
  ret i32 %40
}

declare dso_local i32 @wined3d_mutex_lock(...) #1

declare dso_local i32 @wined3d_create(i32) #1

declare dso_local i32 @wined3d_mutex_unlock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
